--- a/page2.html
+++ b/page2.html
@@ -3,44 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ぼうそうV - 旅行プラン２</title>
+  <meta name="theme-color" content="#0082CA">
+  <title>ぼうそうV - 栃木旅行プラン１</title>
+  <meta name="location" content="栃木"> <!-- 都道府県タグを追加 -->
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="schedule.css">
 </head>
-  <body>
+<body>
   <!-- ヘッダー -->
   <div id="header-container"></div>
 
-  <!-- 本文 -->
-  <main class="contact-container">
-    <div class="timeline">
-      <div class="timeline-item">
-        <div class="timeline-marker"></div>
-        <div class="timeline-content">
-          <p class="time">8:30</p>
-          <h3 class="title">ジム</h3>
-          <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
+<!-- 本文 -->
+  <main>
+    <!-- 旅行プランのタイトルと説明文 -->
+    <section class="plan-header">
+      <h1 class="plan-title">栃木旅行プラン</h1>
+      <p class="plan-description">
+        栃木での楽しい1泊2日の旅行プランをご紹介します。観光名所を巡りながら、美味しい食事やリラックスできるスポットを満喫しましょう！
+      </p>
+    </section>
+    
+    <!-- タブのコンテナ -->
+    <div class="tab-container">
+      <!-- タブのヘッダー -->
+      <div class="tab-header">
+        <button class="tab-link active" onclick="openTab(event, 'day1')">1日目</button>
+        <button class="tab-link" onclick="openTab(event, 'day2')">2日目</button>
+      </div>
+    
+      <!-- タブの内容 -->
+      <div id="day1" class="tab-content contact-container active" style="display: block;">
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">8:30</p>
+              <h3 class="title">ジム</h3>
+              <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">10:00</p>
+              <h3 class="title">自宅にて始業</h3>
+              <p class="description">メールチェック・スケジュール確認。</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">11:00</p>
+              <h3 class="title">会議（オンラインMTG）</h3>
+              <p class="description">案件の進め方やスケジュールの調整を行います。</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="timeline-item">
-        <div class="timeline-marker"></div>
-        <div class="timeline-content">
-          <p class="time">10:00</p>
-          <h3 class="title">自宅にて始業</h3>
-          <p class="description">メールチェック・スケジュール確認。</p>
+
+      <div id="day2" class="tab-content">
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">12:00</p>
+              <h3 class="title">お昼ご飯</h3>
+              <p class="description">丸の内でランチ</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">15:00</p>
+              <h3 class="title">東京駅</h3>
+              <p class="description">お土産の購入</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="timeline-item">
-        <div class="timeline-marker"></div>
-        <div class="timeline-content">
-          <p class="time">11:00</p>
-          <h3 class="title">会議（オンラインMTG）</h3>
-          <p class="description">案件の進め方やスケジュールの調整を行います。</p>
-        </div>
-      </div>
-    </div>
+    </div>     
   </main>
 
+  <script src="schedule.js"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
