--- a/plan.html
+++ b/plan.html
@@ -55,6 +55,7 @@
     
     <!-- フィルター選択ボタン -->
     <section class="plan-filters">
+      <!-- 都道府県選択ボタン -->
       <button class="filter-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -64,6 +65,15 @@
         </svg>
         都道府県から選ぶ
       </button>
+      <select id="location-filter" class="filter-dropdown">
+        <option value="">都道府県を選択</option>
+        <option value="東京">東京</option>
+        <option value="広島">広島</option>
+        <option value="栃木">栃木</option>
+        <option value="京都">京都</option>
+      </select>
+
+      <!-- 季節選択ボタン -->
       <button class="filter-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -76,6 +86,16 @@
         </svg>
         季節から選ぶ
       </button>
+      <select id="season-filter" class="filter-dropdown">
+      <option value="">季節を選択</option>
+        <option value="1月">1月</option>
+        <option value="2月">2月</option>
+        <option value="3月">3月</option>
+        <option value="8月">8月</option>
+        <option value="12月">12月</option>
+      </select>
+
+      <!-- テーマ選択ボタン -->
       <button class="filter-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tag">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -84,9 +104,15 @@
         </svg>
         テーマから選ぶ
       </button>
+      <select id="theme-filter" class="filter-dropdown">
+        <option value="">テーマを選択</option>
+        <option value="自然">自然</option>
+        <option value="温泉">温泉</option>
+        <option value="グルメ">グルメ</option>
+        <option value="歴史">歴史</option>
+      </select> 
     </section>
 
-    <!-- 以下のセクション分を追加 -->
     <section class="plan-description">
      <h1>おすすめのプラン</h1>
       <div class="decorative-line">
