--- a/plan.html
+++ b/plan.html
@@ -56,7 +56,7 @@
     <!-- フィルター選択ボタン -->
     <section class="plan-filters">
       <!-- 都道府県選択ボタン -->
-      <button class="filter-button">
+      <button class="filter-button" id="location-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" />
@@ -74,7 +74,7 @@
       </select>
 
       <!-- 季節選択ボタン -->
-      <button class="filter-button">
+      <button class="filter-button" id="season-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
@@ -96,7 +96,7 @@
       </select>
 
       <!-- テーマ選択ボタン -->
-      <button class="filter-button">
+      <button class="filter-button" id="theme-button">
         <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tag">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
