--- a/plan.html
+++ b/plan.html
@@ -70,6 +70,7 @@
         <li data-value="広島">広島</li>
         <li data-value="栃木">栃木</li>
         <li data-value="京都">京都</li>
+        <li data-value="reset">選択を解除する</li>
       </ul>
 
       <!-- 季節選択ボタン -->
@@ -86,11 +87,11 @@
         <span class="selected-option">季節から選ぶ</span>
       </button>
       <ul id="season-filter" class="filter-dropdown">
-        <li data-value="1月">1月</li>
-        <li data-value="2月">2月</li>
-        <li data-value="3月">3月</li>
-        <li data-value="8月">8月</li>
-        <li data-value="12月">12月</li>
+        <li data-value="春">春</li>
+        <li data-value="夏">夏</li>
+        <li data-value="秋">秋</li>
+        <li data-value="冬">冬</li>
+        <li data-value="reset">選択を解除する</li>
       </ul>
 
       <!-- テーマ選択ボタン -->
@@ -107,6 +108,7 @@
         <li data-value="温泉">温泉</li>
         <li data-value="グルメ">グルメ</li>
         <li data-value="歴史">歴史</li>
+        <li data-value="reset">選択を解除する</li>
       </ul> 
 
       <!-- 検索ボタン -->
