--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA">
-  <title>ぼうそうV - 東京旅行プラン１</title>
+  <title>セキュアトリップ - 東京旅行プラン１</title>
   <meta name="location" content="東京"> <!-- 都道府県タグを追加 -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="schedule.css">
@@ -37,25 +37,49 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">8:30</p>
-              <h3 class="title">ジム</h3>
-              <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-marker"></div>
-            <div class="timeline-content">
               <p class="time">10:00</p>
-              <h3 class="title">自宅にて始業</h3>
-              <p class="description">メールチェック・スケジュール確認。</p>
+              <h3 class="title">東京駅出発</h3>
+              <p class="description">東京駅からスタートです。大きな荷物はコインロッカーに預けると便利です！</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">11:00</p>
-              <h3 class="title">会議（オンラインMTG）</h3>
-              <p class="description">案件の進め方やスケジュールの調整を行います。</p>
+              <p class="time">10:30</p>
+              <h3 class="title">浅草・雷門＆仲見世散策</h3>
+              <p class="description">浅草寺にお参りし、仲見世で食べ歩き！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">12:30</p>
+              <h3 class="title">昼食（もんじゃ焼き＠月島）</h3>
+              <p class="description">月島に移動し、下町の味・もんじゃ焼きを楽しむ。</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">14:00</p>
+              <h3 class="title">そなエリア東京（有明）</h3>
+              <p class="description">防災体験学習施設で、地震や災害時の対応を学びます。</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">16:00</p>
+              <h3 class="title">チームラボプラネッツ（豊洲）</h3>
+              <p class="description">水や光を使った幻想的なアート体験でリフレッシュ！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">18:00</p>
+              <h3 class="title">夜景ディナークルーズ（竹芝桟橋初）</h3>
+              <p class="description">東京湾の夜景を楽しみながらディナー</p>
             </div>
           </div>
         </div>
@@ -66,17 +90,25 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">12:00</p>
-              <h3 class="title">お昼ご飯</h3>
-              <p class="description">丸の内でランチ</p>
+              <p class="time">10:30</p>
+              <h3 class="title">お台場散策（ガンダム像・アクアシティ）</h3>
+              <p class="description">海沿いをゆっくり散策、おしゃれなカフェで一休み。</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">15:00</p>
-              <h3 class="title">東京駅</h3>
-              <p class="description">お土産の購入</p>
+              <p class="time">12:30</p>
+              <h3 class="title">昼食・カフェタイム（表参道・青山）</h3>
+              <p class="description">人気のふわふわパンケーキやカフェでゆっくりランチを楽しみましょう！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">14:30</p>
+              <h3 class="title">丸の内散策・お土産購入（東京駅周辺）</h3>
+              <p class="description">丸の内の景観と東京らしいお土産探しを楽しみましょう！</p>
             </div>
           </div>
         </div>
