--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,6 @@
       <!-- タブのヘッダー -->
       <div class="tab-header">
         <button class="tab-link active" onclick="openTab(event, 'day1')">1日目</button>
-        <button class="tab-link" onclick="openTab(event, 'day2')">2日目</button>
       </div>
     
       <!-- タブの内容 -->
@@ -37,46 +36,49 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">8:30</p>
-              <h3 class="title">ジム</h3>
-              <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
+              <p class="time">9:00</p>
+              <h3 class="title">宇都宮駅</h3>
+              <p class="description">宇都宮駅から観光スタート！</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">10:00</p>
-              <h3 class="title">自宅にて始業</h3>
-              <p class="description">メールチェック・スケジュール確認。</p>
+              <p class="time">9:30</p>
+              <h3 class="title">栃木県防災館（宇都宮市）</h3>
+              <p class="description">地震や火災などのシミュレーションができる防災施設です。</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="time">11:00</p>
-              <h3 class="title">会議（オンラインMTG）</h3>
-              <p class="description">案件の進め方やスケジュールの調整を行います。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="day2" class="tab-content">
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="timeline-marker"></div>
-            <div class="timeline-content">
-              <p class="time">12:00</p>
-              <h3 class="title">お昼ご飯</h3>
-              <p class="description">丸の内でランチ</p>
+              <h3 class="title">大谷資料館（宇都宮市）</h3>
+              <p class="description">巨大な地下空間が広がる採掘場跡を見学。映画やドラマの撮影地としても有名です！</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">15:00</p>
-              <h3 class="title">東京駅</h3>
-              <p class="description">お土産の購入</p>
+              <p class="time">12:30</p>
+              <h3 class="title">昼食（宇都宮市）</h3>
+              <p class="description">宇都宮の有名餃子店で餃子を堪能！いろいろな餃子を食べ比べでみましょう！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">14:00</p>
+              <h3 class="title">日光東照宮</h3>
+              <p class="description">世界遺産の日光東照宮を見学しましょう。有名な「三猿」や「眠り猫」をチェック！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">16:30</p>
+              <h3 class="title">華厳の滝</h3>
+              <p class="description">栃木県を代表する名瀑です！大迫力の景観は見ごたえ抜群！</p>
             </div>
           </div>
         </div>
