--- a/plan.html
+++ b/plan.html
@@ -56,60 +56,49 @@
     <!-- フィルター選択ボタン -->
     <section class="plan-filters">
       <!-- 都道府県選択ボタン -->
-      <button class="filter-button" id="location-button">
-        <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-          <path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" />
-          <path d="M9 4v13" />
-          <path d="M15 7v13" />
-        </svg>
-        <span class="selected-option">都道府県から選ぶ</span>
-      </button>
-      <ul id="location-filter" class="filter-dropdown">
-        <li data-value="東京">東京</li>
-        <li data-value="広島">広島</li>
-        <li data-value="栃木">栃木</li>
-        <li data-value="京都">京都</li>
-        <li data-value="reset">選択を解除する</li>
-      </ul>
+      <div class="selectMultiple" id="location-select">
+   　　 <div>
+     　　 <span class="selected-option">都道府県から選ぶ</span>
+    　　  <div class="arrow"></div>
+  　　  </div>
+   　　 <ul class="filter-dropdown">
+          <li data-value="東京">東京</li>
+          <li data-value="広島">広島</li>
+          <li data-value="栃木">栃木</li>
+          <li data-value="京都">京都</li>
+          <li data-value="reset">選択を解除する</li>
+        </ul>
+      </div>
 
       <!-- 季節選択ボタン -->
-      <button class="filter-button" id="season-button">
-        <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-          <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
-          <path d="M16 3v4" />
-          <path d="M8 3v4" />
-          <path d="M4 11h16" />
-          <path d="M11 15h1" />
-          <path d="M12 15v3" />
-        </svg>
-        <span class="selected-option">季節から選ぶ</span>
-      </button>
-      <ul id="season-filter" class="filter-dropdown">
-        <li data-value="春">春</li>
-        <li data-value="夏">夏</li>
-        <li data-value="秋">秋</li>
-        <li data-value="冬">冬</li>
-        <li data-value="reset">選択を解除する</li>
-      </ul>
+      <div class="selectMultiple" id="season-select">
+        <div>
+          <span class="selected-option">季節から選ぶ</span>
+          <div class="arrow"></div>
+        </div>
+        <ul class="filter-dropdown">
+          <li data-value="春">春</li>
+          <li data-value="夏">夏</li>
+          <li data-value="秋">秋</li>
+          <li data-value="冬">冬</li>
+          <li data-value="reset">選択を解除する</li>
+        </ul>
+      </div>
 
       <!-- テーマ選択ボタン -->
-      <button class="filter-button" id="theme-button">
-        <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tag">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-          <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-          <path d="M3 6v5.172a2 2 0 0 0 .586 1.414l7.71 7.71a2.41 2.41 0 0 0 3.408 0l5.592 -5.592a2.41 2.41 0 0 0 0 -3.408l-7.71 -7.71a2 2 0 0 0 -1.414 -.586h-5.172a3 3 0 0 0 -3 3z" />
-        </svg>
-        <span class="selected-option">テーマから選ぶ</span>
-      </button>
-      <ul id="theme-filter" class="filter-dropdown">
-        <li data-value="自然">自然</li>
-        <li data-value="温泉">温泉</li>
-        <li data-value="グルメ">グルメ</li>
-        <li data-value="歴史">歴史</li>
-        <li data-value="reset">選択を解除する</li>
-      </ul> 
+      <div class="selectMultiple" id="theme-select">
+   　　 <div>
+    　　  <span class="selected-option">テーマから選ぶ</span>
+    　　  <div class="arrow"></div>
+   　　 </div>
+   　　 <ul class="filter-dropdown">
+   　　   <li data-value="自然">自然</li>
+   　　   <li data-value="温泉">温泉</li>
+  　　    <li data-value="グルメ">グルメ</li>
+   　　   <li data-value="歴史">歴史</li>
+   　　   <li data-value="reset">選択を解除する</li>
+   　　 </ul>
+　　  </div>
 
       <!-- 検索ボタン -->
       <button id="search-button" class="search-button">検索</button>
