--- a/plan.html
+++ b/plan.html
@@ -58,7 +58,14 @@
       <!-- 都道府県選択ボタン -->
       <div class="selectMultiple" id="location-select">
    　　 <div>
-     　　 <span class="selected-option">都道府県から選ぶ</span>
+          <!-- SVGアイコン -->
+          <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" />
+            <path d="M9 4v13" />
+            <path d="M15 7v13" />
+          </svg>
+     　   <span class="selected-option">都道府県から選ぶ</span>
     　　  <div class="arrow"></div>
   　　  </div>
    　　 <ul class="filter-dropdown">
