--- a/plan.html
+++ b/plan.html
@@ -80,6 +80,16 @@
       <!-- 季節選択ボタン -->
       <div class="selectMultiple" id="season-select">
         <div>
+          <!-- SVGアイコン -->
+          <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
+            <path d="M16 3v4" />
+            <path d="M8 3v4" />
+            <path d="M4 11h16" />
+            <path d="M11 15h1" />
+            <path d="M12 15v3" />
+          </svg>
           <span class="selected-option">季節から選ぶ</span>
           <div class="arrow"></div>
         </div>
@@ -95,7 +105,12 @@
       <!-- テーマ選択ボタン -->
       <div class="selectMultiple" id="theme-select">
    　　 <div>
-    　　  <span class="selected-option">テーマから選ぶ</span>
+          <svg class="filter-button-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tag">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+            <path d="M3 6v5.172a2 2 0 0 0 .586 1.414l7.71 7.71a2.41 2.41 0 0 0 3.408 0l5.592 -5.592a2.41 2.41 0 0 0 0 -3.408l-7.71 -7.71a2 2 0 0 0 -1.414 -.586h-5.172a3 3 0 0 0 -3 3z" />
+          </svg>
+    　    <span class="selected-option">テーマから選ぶ</span>
     　　  <div class="arrow"></div>
    　　 </div>
    　　 <ul class="filter-dropdown">
