--- a/plan.html
+++ b/plan.html
@@ -135,9 +135,9 @@
      <h1>おすすめのプラン</h1>
       <div class="decorative-line">
         <div class="blue-highlight"></div>
+        <div id="all-plan-list"></div>
       </div>
-    </section>
-    
+    </section>   
   </main>
 
   <script src="script.js"></script>
