--- a/plan.html
+++ b/plan.html
@@ -137,6 +137,18 @@
         <div class="blue-highlight"></div>
         <div id="all-plan-list"></div>
       </div>
+      <!-- おすすめプランを表示 -->
+      <div id="all-plan-list" class="plan">
+        <a href="page1.html" class="plan">
+          <img src="assets/page1hiroshima.jpg" alt="広島旅行" class="plan-image">
+        </a>
+        <a href="page2.html" class="plan">
+          <img src="assets/page2tochigi.jpg" alt="栃木旅行" class="plan-image">
+        </a>
+        <a href="page3.html" class="plan">
+          <img src="assets/page3tokyo.jpg" alt="東京旅行" class="plan-image">
+        </a>
+      </div>
     </section>   
   </main>
 
