--- a/page1.html
+++ b/page1.html
@@ -38,25 +38,41 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">8:30</p>
-              <h3 class="title">ジム</h3>
-              <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-marker"></div>
-            <div class="timeline-content">
               <p class="time">10:00</p>
-              <h3 class="title">自宅にて始業</h3>
-              <p class="description">メールチェック・スケジュール確認。</p>
+              <h3 class="title">広島駅</h3>
+              <p class="description">広島駅から観光スタート！</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">11:00</p>
-              <h3 class="title">会議（オンラインMTG）</h3>
-              <p class="description">案件の進め方やスケジュールの調整を行います。</p>
+              <p class="time">10:30</p>
+              <h3 class="title">原爆ドーム・平和記念公園</h3>
+              <p class="description">世界遺産の原爆ドームを見学、平和記念資料館で戦争と復興の歴史を学ぶ。</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">12:30</p>
+              <h3 class="title">昼食（広島お好み焼き）</h3>
+              <p class="description">広島の名物を堪能しよう！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">14:00</p>
+              <h3 class="title">広島市総合防災センター</h3>
+              <p class="description">地震・火災などのシミュレーション体験を通じて、防災知識を身に付けよう！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">16:00</p>
+              <h3 class="title">広島城</h3>
+              <p class="description">別名「鯉城」とも呼ばれる美しい白を見学！天守閣から広島市内を一望しよう！</p>
             </div>
           </div>
         </div>
@@ -67,17 +83,33 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">12:00</p>
-              <h3 class="title">お昼ご飯</h3>
-              <p class="description">丸の内でランチ</p>
+              <p class="time">9:30</p>
+              <h3 class="title">宮島・厳島神社</h3>
+              <p class="description">世界遺産の厳島神社を参拝。干潮時には大鳥居の下まで歩いて行くことも？！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">11:30</p>
+              <h3 class="title">昼食（あなご飯・もみじ饅頭）</h3>
+              <p class="description">名物のあなご飯やもみじ饅頭を堪能！</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+              <p class="time">13:00</p>
+              <h3 class="title">弥山ハイキング・ロープウェイ</h3>
+              <p class="description">弥山展望台からは瀬戸内海の絶景を一望できます！</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="time">15:00</p>
-              <h3 class="title">東京駅</h3>
-              <p class="description">お土産の購入</p>
+              <h3 class="title">商店街散策・お土産購入</h3>
+              <p class="description">宮島の商店街でお土産探しやカフェを楽しもう！</p>
             </div>
           </div>
         </div>
