--- a/page2.html
+++ b/page2.html
@@ -39,6 +39,8 @@
               <p class="time">9:00</p>
               <h3 class="title">宇都宮駅</h3>
               <p class="description">宇都宮駅から観光スタート！</p>
+              <img src="images/utunomiya.jpg" alt="宇都宮駅">
+              <p class="credit">写真提供：（公社）栃木県観光物産協会</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -55,6 +57,8 @@
               <p class="time">11:00</p>
               <h3 class="title">大谷資料館（宇都宮市）</h3>
               <p class="description">巨大な地下空間が広がる採掘場跡を見学。映画やドラマの撮影地としても有名です！</p>
+              <img src="images/otanisiryokan.jpg" alt="大谷資料館">
+              <p class="credit">写真提供：（公社）栃木県観光物産協会</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -79,6 +83,8 @@
               <p class="time">16:30</p>
               <h3 class="title">華厳の滝</h3>
               <p class="description">栃木県を代表する名瀑です！大迫力の景観は見ごたえ抜群！</p>
+              <img src="images/kegonnnotaki.jpg" alt="華厳の滝">
+              <p class="credit">写真提供：（公社）栃木県観光物産協会</p>
             </div>
           </div>
         </div>
