--- a/page1.html
+++ b/page1.html
@@ -41,6 +41,8 @@
               <p class="time">10:00</p>
               <h3 class="title">広島駅</h3>
               <p class="description">広島駅から観光スタート！</p>
+              <img src="images/hiroshima.jpg" alt="広島">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -49,6 +51,8 @@
               <p class="time">10:30</p>
               <h3 class="title">原爆ドーム・平和記念公園</h3>
               <p class="description">世界遺産の原爆ドームを見学、平和記念資料館で戦争と復興の歴史を学ぶ。</p>
+              <img src="images/heiwakinennkan.jpg" alt="平和記念資料館">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -57,6 +61,8 @@
               <p class="time">12:30</p>
               <h3 class="title">昼食（広島お好み焼き）</h3>
               <p class="description">広島の名物を堪能しよう！</p>
+              <img src="images/hiroshimayaki.jpg" alt="平和記念資料館">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -73,6 +79,8 @@
               <p class="time">16:00</p>
               <h3 class="title">広島城</h3>
               <p class="description">別名「鯉城」とも呼ばれる美しい白を見学！天守閣から広島市内を一望しよう！</p>
+              <img src="images/hiroshimajyou.jpg" alt="広島城">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
         </div>
@@ -102,6 +110,8 @@
               <p class="time">13:00</p>
               <h3 class="title">弥山ハイキング・ロープウェイ</h3>
               <p class="description">弥山展望台からは瀬戸内海の絶景を一望できます！</p>
+              <img src="images/tenbodai.jpg" alt="弥山">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
