--- a/page1.html
+++ b/page1.html
@@ -41,8 +41,7 @@
               <p class="time">10:00</p>
               <h3 class="title">広島駅</h3>
               <p class="description">広島駅から観光スタート！</p>
-              <img src="images/hiroshima.jpg" alt="広島">
-              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
+              <img src="images/hiroshimaeki.jpg" alt="広島駅">
             </div>
           </div>
           <div class="timeline-item">
@@ -102,6 +101,8 @@
               <p class="time">11:30</p>
               <h3 class="title">昼食（あなご飯・もみじ饅頭）</h3>
               <p class="description">名物のあなご飯やもみじ饅頭を堪能！</p>
+              <img src="images/tenbodai.jpg" alt="弥山">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -120,6 +121,8 @@
               <p class="time">15:00</p>
               <h3 class="title">商店街散策・お土産購入</h3>
               <p class="description">宮島の商店街でお土産探しやカフェを楽しもう！</p>
+              <img src="images/momijimanju.jpg" alt="もみじ饅頭">
+              <p class="credit">写真提供：公益財団法人広島観光コンベンションビューロー</p>
             </div>
           </div>
         </div>
