--- a/page1.html
+++ b/page1.html
@@ -67,19 +67,19 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="time">14:00</p>
-              <h3 class="title">広島市総合防災センター</h3>
-              <p class="description">地震・火災などのシミュレーション体験を通じて、防災知識を身に付けよう！</p>
+              <p class="time">13:30</p>
+              <h3 class="title">広島城</h3>
+              <p class="description">別名「鯉城」とも呼ばれる美しい白を見学！天守閣から広島市内を一望しよう！</p>
+              <img src="images/hiroshimajyou.jpg" alt="広島城">
+              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="time">16:00</p>
-              <h3 class="title">広島城</h3>
-              <p class="description">別名「鯉城」とも呼ばれる美しい白を見学！天守閣から広島市内を一望しよう！</p>
-              <img src="images/hiroshimajyou.jpg" alt="広島城">
-              <p class="credit">写真提供：一般社団法人広島県観光連盟</p>
+              <h3 class="title">呉市防災センター</h3>
+              <p class="description">豪雨体験を通じて、防災知識を身に付けよう！</p>
             </div>
           </div>
         </div>
