--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
       </div>
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
-        <a href="index.html" class="nav-button oval">
+        <a href="map.html" class="nav-button oval">
           <svg class="button-icon map-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"  height="24" fill="none" stroke="#0082CA" stroke-width="2">
             <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"></path>
           </svg>マップ
@@ -43,7 +43,7 @@
   <div class="side-menu" id="side-menu">
     <button class="close-button" id="close-button">×</button> <!-- 閉じるボタン -->
     <ul>
-      <li><a href="index.html">マップ</a></li>
+      <li><a href="map.html">マップ</a></li>
       <li><a href="plan.html">旅行プラン</a></li>
       <li><a href="badge.html">バッジ</a></li>
       <li><a href="about.html">ぼうそうV説明</a></li>
