--- a/map.html
+++ b/map.html
@@ -12,6 +12,7 @@
   <div id="header-container"></div>
 
   <!-- マップ部分の内容を追加 -->
+  <h1>旅行プランを探す</h1>
   <main class="map-container">
     <div id="map" class="map"></div>
     <!-- ピンデータファイル -->
