--- a/index.html
+++ b/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta http-equiv="refresh" content="0; URL='intro.html'">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
-  <title>ぼうそうV - マップ画面</title>
-  <link rel="stylesheet" href="style.css">
+  <title>SecureTrip - 読み込み中</title>
 </head>
 <body>
-  <!-- ヘッダー -->
-  <div id="header-container"></div>
-
-  <!-- マップ部分の内容を追加 -->
-  <main class="map-container">
-    <div id="map" class="map"></div>
-    <!-- ピンデータファイル -->
-　  <script src="pins.js"></script>
-    <script src="map.js"></script>
-
-  <!-- バッジコンテナ -->
-  <div id="badge-container"></div> 
-  </main>
-  <!-- PapaParseライブラリの読み込み -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-
-  <script src="script.js"></script>
+  <p>Redirecting to <a href="intro.html">intro.html</a>...</p>
 </body>
+</html>
