--- a/intro.html
+++ b/intro.html
@@ -39,8 +39,9 @@
       pointer-events: none;
     }
 
-    #logo {
-      font-size: 2rem;
+    #logo img {
+      width: 300px;
+      height: auto;
       animation: fadeIn 2s ease-in-out;
     }
 
@@ -77,7 +78,9 @@
 
   <!-- 最初のロゴ画面 -->
   <div id="intro">
-      <h1 id="logo">ぼうそうV へようこそ！</h1>
+    <div id="logo">
+      <img src="assets/bbelogo.jpg" alt="ロゴ">
+    </div>
   </div>
 
   <!-- 説明ページ -->
