--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: black;
+      background-color: white;
       color: white;
       text-align: center;
       overflow: hidden;
@@ -26,7 +26,7 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      background-color: black;
+      background-color: white;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -40,7 +40,7 @@
     }
 
     #logo img {
-      width: 300px;
+      width: 500px;
       height: auto;
       animation: fadeIn 2s ease-in-out;
     }
