--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: white;
+      background-color: #0082CA;
       color: white;
       text-align: center;
       overflow: hidden;
@@ -26,7 +26,7 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      background-color: white;
+      background-color: #0082CA;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -34,15 +34,25 @@
       transition: opacity 1.5s ease-in-out;
     }
 
+    .intro-title {
+      text-align: center;
+      font-size: 3rem; /* 元のサイズより大きく */
+      font-weight: bold;
+      position: relative;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .intro-subtitle{
+      display: block;
+      font-size: 1rem; /* サブタイトルのフォントサイズを適切に */
+      font-weight: normal;
+      color: #ffffff; /* 
+      margin-bottom: 10px;
+    }
+
     #intro.fade-out {
       opacity: 0;
       pointer-events: none;
-    }
-
-    #logo img {
-      width: 500px;
-      height: auto;
-      animation: fadeIn 2s ease-in-out;
     }
 
     @keyframes fadeIn {
@@ -78,15 +88,14 @@
 
   <!-- 最初のロゴ画面 -->
   <div id="intro">
-    <div id="logo">
-      <img src="assets/bbelogo.jpg" alt="ロゴ">
+    <div id="intro-title">
+      <span class="intro-subtitle">非日常の旅路に、日常の防災を</span>
+      SecureTrip
     </div>
   </div>
 
   <!-- 説明ページ -->
   <div id="main-content">
-      <h2>ぼうそうVとは？</h2>
-      <p>このサイトでは、地図を使ってぼうそう地域の情報を提供しています。</p>
       <a href="map.html" class="btn">マップを開く</a>
   </div>
 
