--- a/intro.html
+++ b/intro.html
@@ -42,11 +42,11 @@
       animation: fadeIn 2s ease-in-out;
     }
 
-    .intro-subtitle{
+    .intro-subtitle {
       display: block;
       font-size: 1rem; /* サブタイトルのフォントサイズを適切に */
       font-weight: normal;
-      color: #ffffff; /* 
+      color: #000000; /* 
       margin-bottom: 10px;
     }
 
