--- a/intro.html
+++ b/intro.html
@@ -46,7 +46,7 @@
       display: block;
       font-size: 2.5rem; /* サブタイトルのフォントサイズを適切に */
       font-weight: normal;
-      color: #000000; /* 
+      color: #ffffff;
       margin-bottom: 10px;
     }
 
@@ -88,7 +88,7 @@
 
   <!-- 最初のロゴ画面 -->
   <div id="intro">
-    <div id="intro-title">
+    <div class="intro-title">
       <span class="intro-subtitle">非日常の旅路に、日常の防災を</span>
       SecureTrip
     </div>
