--- a/intro.html
+++ b/intro.html
@@ -40,6 +40,7 @@
       font-weight: bold;
       position: relative;
       animation: fadeIn 2s ease-in-out;
+      margin-top: -20px;
     }
 
     .intro-subtitle {
