--- a/badge.html
+++ b/badge.html
@@ -14,7 +14,9 @@
 
   <!-- 本文 -->
   <main class="contact-container">
+    <script src="badge.js"></script>
     <div id="badge-container">
+      
       <!-- バッジがここに動的に追加されます -->
     </div>
   </main>
