--- a/map.html
+++ b/map.html
@@ -17,6 +17,9 @@
     <!-- ピンデータファイル -->
 　  <script src="pins.js"></script>
     <script src="map.js"></script>
+
+    <!-- バッジコンテナ -->
+    <div id="badge-container"></div>
   </main>
   <!-- PapaParseライブラリの読み込み -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
