--- a/intro.html
+++ b/intro.html
@@ -69,6 +69,10 @@
       height: 100vh;
     }
 
+    #header-container {
+      display: none;
+    }
+
     .btn {
       display: inline-block;
       margin-top: 20px;
@@ -97,7 +101,8 @@
 
   <!-- 説明ページ -->
   <div id="main-content">
-      <a href="map.html" class="btn">マップを開く</a>
+    <div id="header-container"></div>
+    <a href="map.html" class="btn">マップを開く</a>
   </div>
 
   <script>
