--- a/intro.html
+++ b/intro.html
@@ -114,6 +114,8 @@
       setTimeout(() => {
         document.getElementById("intro").style.display = "none";
         document.getElementById("main-content").style.display = "block";
+
+        document.getElementById("header-container").style.display = "block";
       }, 1500);
     }, 3000);
   </script>
