--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
   <title>SecureTrip - ようこそ</title>
-  <link rel="stylesheet" href"intro.css">
+  <link rel="stylesheet" href="intro.css">
 </head>
 <body>
 
