--- a/intro.html
+++ b/intro.html
@@ -20,6 +20,19 @@
   <!-- 説明ページ -->
   <div id="main-content">
     <div id="header-container"></div>
+
+    <!-- サイト紹介 -->
+    <section id="site-intro">
+      <h2>「防災」×「観光」</h2>
+      <p>
+        旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。
+        楽しい旅行の計画に、<strong>もしも</strong>の備えを。
+        <strong>SecureTrip</strong>は、観光の楽しさと防災の安心感を融合させた、新しい旅行体験を提供します。
+      </p>
+    </section>
+
+    <!-- 課題と解決策 -->
+    
   </div>
 
   <script src="script.js"></script>
