--- a/intro.html
+++ b/intro.html
@@ -32,7 +32,20 @@
     </section>
 
     <!-- 課題と解決策 -->
-    
+    <section id="problem-solution">
+      <h2>防災はなぜ必要？</h2>
+      <p>
+        忙しい日常の中で、防災はつい後回しになりがち。
+        でも、本当に守りたいものは、日常の「当たり前」の暮らし。
+        だからこそ、私たちは防災をもっと<storong>"自然な習慣"</storong>にする必要がある。
+      </p>
+
+      <h3>「備える」は、もっとスマートに</h3>
+      <p>
+        <strong>SecureTrip</strong>は、旅の楽しさをそのままに、防災を意識するきっかけを創る。
+        ３つの機能で、<strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
+      </p>
+    </section>
   </div>
 
   <script src="script.js"></script>
