--- a/intro.html
+++ b/intro.html
@@ -46,6 +46,34 @@
         ３つの機能で、<strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
       </p>
     </section>
+
+    <!-- 機能紹介 -->
+    <section id="feature">
+      <h3>SecureTripの主な機能</h2>
+
+      <div class="feature">
+        <h3>マップ</h3>
+        <p>
+          <strong>「観光地」</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
+        </p>
+        <a href="map.html" class="btn-feature">マップを開く</a>
+      </div>
+
+      <div class="feature">
+        <h3>防災チェックイン</h3>
+        <p>
+          <strong>「ただ訪れる」</strong>だけじゃない、新しい観光スタイル。
+        </p>
+      </div>
+
+      <div class="feature">
+        <h3>旅行プラン提案</h3>
+        <p>
+          <strong>「今までのスポット」</strong>だけじゃない、旅のルートに新しい選択肢を。
+        </p>
+        <a href="plan.html" class="btn-feature">プランを開く</a>
+      </div>
+    </section>
   </div>
 
   <script src="script.js"></script>
