--- a/intro.html
+++ b/intro.html
@@ -25,8 +25,8 @@
     <section id="site-intro">
       <h2>「防災」×「観光」</h2>
       <p>
-        旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。
-        楽しい旅行の計画に、<strong>もしも</strong>の備えを。
+        旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
+        楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
         <strong>SecureTrip</strong>は、観光の楽しさと防災の安心感を融合させた、新しい旅行体験を提供します。
       </p>
     </section>
@@ -35,15 +35,15 @@
     <section id="problem-solution">
       <h2>防災はなぜ必要？</h2>
       <p>
-        忙しい日常の中で、防災はつい後回しになりがち。
-        でも、本当に守りたいものは、日常の「当たり前」の暮らし。
+        忙しい日常の中で、防災はつい後回しになりがち。<br>
+        でも、本当に守りたいものは、日常の「当たり前」の暮らし。<br>
         だからこそ、私たちは防災をもっと<storong>"自然な習慣"</storong>にする必要がある。
       </p>
 
       <h3>「備える」は、もっとスマートに</h3>
       <p>
-        <strong>SecureTrip</strong>は、旅の楽しさをそのままに、防災を意識するきっかけを創る。
-        ３つの機能で、<strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
+        <strong>SecureTrip</strong>は、旅の楽しさをそのままに、防災を意識するきっかけを創る。<br>
+        <strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
       </p>
     </section>
 
