--- a/intro.html
+++ b/intro.html
@@ -39,6 +39,7 @@
         でも、本当に守りたいものは、日常の「当たり前」の暮らし。<br>
         だからこそ、私たちは防災をもっと<storong>"自然な習慣"</storong>にする必要がある。
       </p>
+      <img src="assets/23681316_s.jpg" alt="ブランコ" class="intro-image">
 
       <h3>「備える」は、もっとスマートに</h3>
       <p>
