--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
   <!-- ヘッダー -->
   <div id="header-container"></div>
-  <main class="about-container">
+  <main class="main-content">
 
     <!-- サイト紹介 -->
     <section id="site-intro">
